CHANGES
=======

v0.1.5
------

* Update version
* Log last change revision number for each branch
* Add rev. number in svn checkout and config.yaml
* Remove code to create user copy of trunk
* new version
* Change source of namelist files Fixes #13
* Need the soil namelist in the run dir
* Changelog

v0.1.4
------

* Update version
* Get the pft\_params.nml file in run directory
* Clarify instructions for run directory

v0.1.3
------

* Update version
* Fixes issue #1: missing line to subprocess

v0.1.2
------

* Update README.md
* Update README.md
* Update README.md
* Update README.md
* Add file auto-created
* Revised job size for better CPU utilisation
* Correct PyYAML dependency for conda
* Update version
* Add yaml dependency for conda
* Add dependencies for conda
* Change to README
* Update README
* Use site data published in ks32
* Add running the configurations
* .gitignore files from install
* Fix: re-building source code
* Add building CABLE
* Fix setup with setup.cfg
* Moved all setup phases into a class
* Add setup for compilation
* Fix issue with configuration file format
* simplify the file structure
* Attempt to build for command line
* Define input config in yaml
* Create min. work directory tree
* Modify command line args
* Add simple command line
* Clean start
* Update .gitignore
* Add LICENSE
* separate inputs by type of input
* Update README.md
* Update README.md
* Forgotten loading the python module
* To run on multi-processors
* Some typos in the README file
* More docs updates to make things simpler for users
* Updated documentation
* Use hh5 environments in qsub script
* Load hh5 conda environment in qsub script

v0.1
----

* Serial runs only work for now
* Fix imports
* update all from optparse to argparse
* Black formatting
* A few missing things for mpi exe. name
* Add "-mpi" to exe name if compiled with mpi
* "Fix" error handling for subprocess. To update
* Import submodules properly