@@ -1,6 +1,11 @@
 CHANGES
 =======
 
+* new version
+* Add specification of a subset of met. sites
+* Handling of revision number for branches
+* Formatting
+
 v0.1.5
 ------
 
